feat: add save pixelart handler
