# services/gateway/internal/infra/api/router.go
@@ -11,9 +11,11 @@ package api
 import (
 	"github.com/1ncrease0/pixly/pkg/jwt"
 	"github.com/1ncrease0/pixly/services/gateway/internal/config"
+	"github.com/1ncrease0/pixly/services/gateway/internal/infra/api/handlers/art"
 	"github.com/1ncrease0/pixly/services/gateway/internal/infra/api/handlers/auth"
 	"github.com/1ncrease0/pixly/services/gateway/internal/infra/api/handlers/healthcheck"
 	"github.com/1ncrease0/pixly/services/gateway/internal/infra/api/middleware"
+	artgrpc "github.com/1ncrease0/pixly/services/gateway/internal/infra/grpc/art"
 	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
@@ -23,7 +25,7 @@ import (
 	_ "github.com/1ncrease0/pixly/services/gateway/docs"
 )
 
-func InitRoutes(cfg *config.Config, log *slog.Logger, authClient auth.AuthClient, m *jwt.Manager) *gin.Engine {
+func InitRoutes(cfg *config.Config, log *slog.Logger, authClient auth.AuthClient, artClient *artgrpc.Client, m *jwt.Manager) *gin.Engine {
 	r := gin.New()
 	r.Use(middleware.Logging(log))
 	r.Use(gin.Recovery())
@@ -41,8 +43,10 @@ func InitRoutes(cfg *config.Config, log *slog.Logger, authClient auth.AuthClient
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	health := healthcheck.NewHandler()
-	authH := auth.NewHandler(log, authClient)
+	secure := cfg.Env != "local"
+	authH := auth.NewHandler(log, authClient, cfg.JWT.AccessTTL, cfg.JWT.RefreshTTL, secure)
 
+	artH := art.NewHandler(log, artClient)
 	authMiddleware := middleware.Auth(m, log)
 	v1 := r.Group("api/v1", middleware.Logging(log))
 	{
@@ -57,6 +61,7 @@ func InitRoutes(cfg *config.Config, log *slog.Logger, authClient auth.AuthClient
 		}
 
 		v1.GET("/me", authMiddleware, authH.Me)
+		v1.POST("/pixelart", authMiddleware, artH.SavePixelart)
 	}
 	return r
 }
